Fix page Y overflow

--- a/sources/css/main.less
+++ b/sources/css/main.less
@@ -339,10 +339,10 @@ header {
     #confim-control {
         text-align: center;
         background: black !important; /* Flemme de spécificité */
-
+        padding-top: 1.5rem;
         h1 {
             font-weight: 200;
-            margin-bottom: 0;
+            margin: 0;
         }
         p {
             margin-top: .5em;;
@@ -350,7 +350,7 @@ header {
     }
     #sub-apps {
         margin-top: 40px;
-        
+
         p {
             font-size: 1.5rem;
             margin: 20px;
